[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursor-agent-sdk"
version = "0.1.1"
description = "Python client wrapper for the Cursor Agent API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Aiden Metcalfe", email = "aidenmetcalfe@hotmail.com" },
]
keywords = ["cursor", "agent", "api", "httpx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
]

[project.urls]
# GitHub → repo → Settings → Pages — paste the same URL PyPI shows as "Documentation"
Documentation = "https://aidmet.github.io/cursor-agent-api/"
Repository = "https://github.com/aidmet/cursor-agent-api"

[project.optional-dependencies]
docs = [
    "sphinx>=7",
    "sphinx-rtd-theme>=2",
]

[tool.hatch.build.targets.wheel]
packages = ["cursor_agent"]

[tool.hatch.build.targets.sdist]
include = ["/cursor_agent"]
